# lerImagens

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FilesToDO.sh  Makefile  README.md  Thresholds_base.txt  ToDoBidisperse.txt  cmake_install.cmake  gmon.out  lerImagem  processSimulations.sh  process_folder.sh  process_folder_bi.sh  report.txt  simulationFolders.txt  thresholds.txt  thresholds_base.txt
Files/: Alturas.txt  GranularTemperature.txt  Interface.txt  Mixing.txt  Plugs.txt  VelocityX.txt  VelocityY.txt  circulos.txt  circulos_ant.txt  lagrangian.txt  lagrangian_points.txt  massFluxX.txt  massFluxY.txt
Files/Temp/: frame0000000001d.txt  frame0000000002.txt  frame0000000002d.txt  frame0000000003.txt  frame0000000003d.txt  frame0000000004.txt  (+3469 more)
PostFiles/: .txt  Expansion.txt  GranularTemperature.txt  PartcleFraction.txt  Particles1.txt  Particles2.txt  Plugs.txt
Scripts/: FilesToDO.sh  Folders.txt  FoldersSimple.txt  ToDoBidisperse (cópia).txt  ToDoBidisperse.txt  ToDoMonodisperse.txt  processSimulations.sh  process_folder_bi.sh  process_folder_mono.sh  simulationFolders.txt
include/: altura.h  auction.h  circles_data.h  circulos.h  eulerianField.h  eulerianFieldSimulation.h  hungarian.h  hungarian_fast.h  lagrangian.h  math_functions.h  matrix.h  mixing.h  preProcess.h  read_control.h  simulation.h
src/: altura.cpp  auction.cpp  circles_data.cpp  circulos.cpp  eulerianField.cpp  eulerianFieldSimulation.cpp  hough.cpp  lagrangian.cpp  lerImagem.cpp  math_functions.cpp  mixing.cpp  postProcess.py  preProcess.cpp  read_control.cpp  simulation.cpp
(+7 files in other folders)
