cmake_minimum_required(VERSION 2.8)
project(lerImagem)
find_package( OpenCV REQUIRED PATHS /home/user/opencv/build NO_DEFAULT_PATH)
add_executable( lerImagem src/altura.cpp src/circulos.cpp src/lerImagem.cpp src/preProcess.cpp src/auction.cpp src/hough.cpp src/lagrangian.cpp src/circles_data.cpp src/eulerianField.cpp src/read_control.cpp src/mixing.cpp src/simulation.cpp src/eulerianFieldSimulation.cpp)
target_link_libraries( lerImagem ${OpenCV_LIBS})

set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -pthread")
set(CMAKE_HAVE_THREADS_LIBRARY 1)
set(CMAKE_USE_WIN32_THREADS_INIT 0)
set(CMAKE_USE_PTHREADS_INIT 1)
set(THREADS_PREFER_PTHREAD_FLAG ON)

option(MY_DEBUG_MODE "Set mode for compiler" OFF)
if(MY_DEBUG_MODE)
    set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
    add_definitions( -DDEBUG_MODE=ON )
else()
    set(CMAKE_CONFIGURATION_TYPES "Release" CACHE STRING "" FORCE)
endif(MY_DEBUG_MODE)
unset(MY_DEBUG_MODE)
